--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adding system path\n",
     "import sys, pathlib\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
@@ -21,17 +33,6 @@
     "# Set to show warnings only once\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove scrollable windows\n",
-    "%%javascript\n",
-    "IPython.OutputArea.auto_scroll_threshold = 9999"
    ]
   },
   {
@@ -118,18 +119,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Function for date time analysis"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Function for date time analysis\n",
     "##TODO: Move to a library function\n",
     "def get_previous_dates(sdate, edate, date_shift_months):\n",
     "    sdate_datetime = datetime.strptime(sdate,'%Y-%m-%d')\n",
@@ -154,24 +149,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Get usage for previous month as a predictive sanity check\n",
-    "p1_sdate, p1_edate = get_previous_dates(sdate, edate, 1)\n",
-    "df = qlib.total_cost_breakdown_ts(p1_sdate, p1_edate)\n",
-    "df = df.fillna('Unassigned')\n",
-    "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "df_by_usage_category.loc[len(df_by_usage_category.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
-    "df_by_usage_category_prev = df_by_usage_category.round(2)\n",
-    "print('Credit and dollar usage by category (Previous month)')\n",
-    "print('----------------------------------------------------')\n",
-    "print(tabulate(df_by_usage_category_prev, headers='keys', tablefmt='rounded_outline', showindex=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('Unassigned')\n",
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
@@ -180,6 +157,25 @@
     "print('Credit and dollar usage by category (Current month)')\n",
     "print('---------------------------------------------------')\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get usage for previous month as a predictive sanity check\n",
+    "p1_sdate, p1_edate = get_previous_dates(sdate, edate, 1)\n",
+    "df_prev = qlib.total_cost_breakdown_ts(p1_sdate, p1_edate)\n",
+    "df_prev = df_prev.fillna('Unassigned')\n",
+    "df_by_usage_category_prev = df_prev.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
+    "df_by_usage_category_prev.loc[len(df_by_usage_category_prev.index)] = ['Total', df_by_usage_category_prev['credits'].sum(), \n",
+    "                                                                       df_by_usage_category_prev['dollars'].sum()]\n",
+    "df_by_usage_category_prev = df_by_usage_category_prev.round(2)\n",
+    "print('Credit and dollar usage by category (Previous month)')\n",
+    "print('----------------------------------------------------')\n",
+    "print(tabulate(df_by_usage_category_prev, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -212,8 +208,10 @@
     "    subplot_titles=(\"Dollars\", \"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", \n",
+    "                     rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits',\n",
+    "                     rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -302,6 +300,7 @@
     "* The typical compute through the night is non-zero at ~ 3 credits. \n",
     "* The nightime compute consumption is flat till 23rd but becomes noisy starting 24th.\n",
     "* There is an increase in nightime consumption on 9th and 10th of ~30% which reverts to usual pattern subsequently. \n",
+    "* The 2 pm spike in credit usage becomes very prominent on some days - can this be tied to any specific usage?\n",
     "\n",
     "#### Cloud Services\n",
     "* Cloud services in aggregate consume < 10% of the budget - which is consistent with no over charges if this is true for each warehouse on an hourly basis.\n",
@@ -334,6 +333,7 @@
     "* Analyze Cloud Services credit consumption on an hourly basis at a warehouse level to make sure no overages hourly by warehouse.\n",
     "* Investigate noisy night time usage after Sept 23.\n",
     "* Investigate increased baseline consumption that occurs on 10th and 11th Oct.\n",
+    "* Evaluate queries and tasks are driving spikes in credits and if it can be tied to individual queries.\n",
     "* Evaluate the system for compute bottlenecks and queue lengths for - warehouses, tasks, and queries at 9 am and 2 pm due to usage spikes.\n",
     "* Based on cost we expect ~10 TB storage is being used. Verify this number for consistency.\n",
     "* Set up a time varying resource monitor on the account level based on these usage patterns to flag any anomalous usage. Usage monitoring set naively:\n",
@@ -455,10 +455,7 @@
     "\n",
     "* User FIVETRAN_USER incurs ~ 36% of the costs at ~ 1086 credits.\n",
     "    * FIVETRAN_USER had an 80% consumption increase on Oct. 1. This was visible as a sharp peak in total consumption increase.\n",
-    "* Users ML_SERVICE_DEV and DBT_PROD have next highest consumption at ~ 14.4% and ~ 430 credits.\n",
-    "* Low_cost_users i.e. all users spending <1% of credits combined together spend ~ 2.4%, 72 credits. These users are:\n",
-    "    ANALYTICS_EXERCISE_USER, BAMBOO, GREGORYW, GREGORYW_DEV, LOOKER_DEV_ADMIN, LOOKER_RAW_DEV, MAXH_DEV, PATRICKL, PATT, ROBS, TEST_EXERCISE_AS, TEST_EXERCISE_CM, \n",
-    "    TEST_EXERCISE_JAR. TEST_EXERCISE_LAZ, TEST_EXERCISE_RDN, VERTEX_API_DEV, VERTEX_API_DEV_JENKINS                                                  \n",
+    "* Users ML_SERVICE_DEV and DBT_PROD have next highest consumption at ~ 14.4% and ~ 430 credits.                                              \n",
     "* Following users are extremely bursty in their usage and should be dithered if possible:\n",
     "    * DBT_DEV\n",
     "    * DBT_PROD\n",
@@ -778,6 +775,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -798,6 +796,13 @@
   "vscode": {
    "interpreter": {
     "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
+   }
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
    }
   }
  },
