--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adding system path\n",
     "import sys, pathlib\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
@@ -21,19 +33,6 @@
     "# Set to show warnings only once\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove scrollable windows\n",
-    "%%javascript\n",
-    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "    return false;\n",
-    "}"
    ]
   },
   {
@@ -144,14 +143,7 @@
     "    queries = df[\"query_text\"].values.tolist()\n",
     "    query_hashes = [get_query_hash(q.encode()).hexdigest() for q in queries]\n",
     "    df[\"query_hash\"] = query_hashes\n",
-    "    df_unique_queries = df.drop_duplicates(subset=['query_hash']).reset_index(drop=True)\n",
-    "    df2 = df.groupby('query_hash',as_index=False)[['credits','execution_success','execution_fail']].sum()\n",
-    "    df_unique_queries.drop(columns=[\"execution_status\",\"execution_success\",\"execution_fail\"], inplace=True)\n",
-    "#     df2.drop(columns=[\"execution_status\"], inplace=True)\n",
-    "    df_new = pd.merge(df_unique_queries, df2, on=[\"query_hash\"],suffixes=('_individual_max', '_total'))\n",
-    "    df_new = df_new.sort_values(by='credits_total', ascending=False)\n",
-    "    return df_new\n",
-    "    return df2"
+    "    return df"
    ]
   },
   {
@@ -167,27 +159,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.n_expensive_queries(sdate,edate,200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = qlib.n_expensive_queries(sdate,edate,200)\n",
     "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
-    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##TODO: Temporal distribution of expensive queries by warehouse\n",
-    "df_unique = get_unique_query(df).reset_index(drop=True)"
+    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
+    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]"
    ]
   },
   {
@@ -197,10 +172,11 @@
    "outputs": [],
    "source": [
     "## Naive most expensive queries\n",
+    "n = 50\n",
     "trace1 = go.Scatter(\n",
     "        mode='lines+markers',\n",
-    "        x = df['query_id'][0:50],\n",
-    "        y = df['credits'][0:50],\n",
+    "        x = df['query_id'][0:n],\n",
+    "        y = df['credits'][0:n],\n",
     "        name=\"Credits\",\n",
     "        marker=dict(\n",
     "            size=10,\n",
@@ -226,16 +202,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Warning note\n",
+    "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "    \n",
+    "* We do not recommend the naive approach since it can have very limited ROI\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: Temporal distribution of expensive queries by warehouse\n",
+    "df_hash = get_unique_query(df)\n",
+    "# df_hash.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_execution_status = df_hash.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "\n",
+    "# Pie charts for expensive queries by execution status\n",
+    "fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
+    "    subplot_titles=(\"Count\", \"Credits\")\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df_by_execution_status['execution_status'].tolist(), values=df_by_execution_status['execution_count'].tolist(), \n",
+    "                     name=\"Execution Count\", rotation=45, marker_colors=[\"red\",\"green\"]),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_execution_status['execution_status'].tolist(), values=df_by_execution_status['credits'].tolist(),\n",
+    "                     name='Credits', rotation=45, marker_colors=[\"red\",\"green\"]),row=1,col=2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Expensive queries breakdown by execution status\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_user = df_hash.groupby([\"user_name\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "print('Credit and count of expensive queries by user')\n",
+    "print('---------------------------------------------')\n",
+    "print(tabulate(df_by_user, headers='keys', tablefmt='rounded_outline', showindex=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pie charts for expensive queries by execution status\n",
+    "fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
+    "    subplot_titles=(\"Count\", \"Credits\")\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['execution_count'].tolist(), \n",
+    "                     name=\"Execution Count\", rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),\n",
+    "                     name='Credits', rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Expensive queries breakdown by user\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_wh = df_hash.groupby([\"warehouse_name\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "print('Credit and count of expensive queries by user')\n",
+    "print('---------------------------------------------')\n",
+    "print(tabulate(df_by_wh, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pie charts for expensive queries by execution status\n",
+    "fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
+    "    subplot_titles=(\"Count\", \"Credits\")\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df_by_wh['warehouse_name'].tolist(), values=df_by_user['execution_count'].tolist(), \n",
+    "                     name=\"Execution Count\", rotation=45, marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_wh['warehouse_name'].tolist(), values=df_by_user['credits'].tolist(),\n",
+    "                     name='Credits', rotation=45, marker_colors=color_scheme),row=1,col=2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Expensive queries breakdown by warehouse\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'})\n",
+    "fig.show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Most expensive queries\n",
-    "\n",
+    "df_by_hash = df_hash.groupby([\"query_hash\"])[\"execution_success\",\"execution_fail\",\"credits\"].sum().reset_index().sort_values('credits', ascending=False)\n",
     "trace1 = go.Bar(\n",
-    "        x = df_unique['query_hash'],\n",
-    "        y = df_unique['execution_success'],\n",
+    "        x = df_by_hash['query_hash'],\n",
+    "        y = df_by_hash['execution_success'],\n",
     "        name=\"Execution success count\",\n",
     "        yaxis='y2',\n",
     "        marker=dict(color='green'),\n",
@@ -243,8 +353,8 @@
     "    )\n",
     "\n",
     "trace2 = go.Bar(\n",
-    "        x = df_unique['query_hash'],\n",
-    "        y = df_unique['execution_fail'],\n",
+    "        x = df_by_hash['query_hash'],\n",
+    "        y = df_by_hash['execution_fail'],\n",
     "        name=\"Execution fail count\",\n",
     "        yaxis='y2',\n",
     "        marker=dict(color='red'),\n",
@@ -253,8 +363,8 @@
     "\n",
     "trace3  = go.Scatter(\n",
     "        mode='lines+markers',\n",
-    "        x = df_unique['query_hash'],\n",
-    "        y = df_unique['credits_total'],\n",
+    "        x = df_by_hash['query_hash'],\n",
+    "        y = df_by_hash['credits'],\n",
     "        name=\"Credits\",\n",
     "        line=dict(color='black'),\n",
     "    )\n",
@@ -267,14 +377,14 @@
     "    yaxis=dict(\n",
     "        title=\"Total Credits\",\n",
     "        showgrid=False,\n",
-    "        range=[0, math.ceil(max(df_unique[\"credits_total\"]))+10]\n",
+    "        range=[0, math.ceil(max(df_by_hash[\"credits\"]))+10]\n",
     "    ),\n",
     "    yaxis2=dict(\n",
     "        title=\"Number of times ran\", overlaying=\"y\",\n",
     "        side=\"right\",\n",
     "#         position=0.98,\n",
     "        showgrid=False,\n",
-    "        range=[0, math.ceil(max(df_unique[\"execution_success\"] + df_unique[\"execution_fail\"]))+10]\n",
+    "        range=[0, math.ceil(max(df_by_hash[\"execution_success\"] + df_by_hash[\"execution_fail\"]))+10]\n",
     "    ),\n",
     "    xaxis=dict(\n",
     "        title=\"Query Hash\"\n",
@@ -297,7 +407,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unique.head(100)"
+    "df_by_hash = df_hash.groupby([\"query_hash\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "df_by_hash = df_by_hash.sort_values('credits', ascending=False)\n",
+    "print(tabulate(df_by_hash, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check times of 5 most expensive queries with WH credit usage peaks\n",
+    "# q1 = df_hash[df_hash['query_hash'] == '6ef334ed61427031d52acf53a055ab57'].sort_values('start_time')\n",
+    "# q1[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "q2 = df_hash[df_hash['query_hash'] == '295230eae35c6270a0e240fca4a0be6f'].sort_values('start_time')\n",
+    "q2[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "# q3 = df_hash[df_hash['query_hash'] == '233655c56c9344d5c303bdd8f4b9f264'].sort_values('start_time')\n",
+    "# q3[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "# q4 = df_hash[df_hash['query_hash'] == 'd154d97ba4dbd4fd677baa48d6b47b71'].sort_values('start_time')\n",
+    "# q4[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "# q5 = df_hash[df_hash['query_hash'] == '5cb178243f7dc6005e8141a72f9bc895'].sort_values('start_time')\n",
+    "# q5[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "# q6 = df_hash[df_hash['query_hash'] == '535f3564c40d364959615108ceee4ea0'].sort_values('start_time')\n",
+    "# q6[[\"warehouse_name\",\"start_time\",\"end_time\"]]"
    ]
   },
   {
@@ -311,9 +444,13 @@
     "* Naively optimizing the most expensive query is not an effective strategy. Some queries:\n",
     "    * Fail to run to completion generating no ROI but use resources\n",
     "    * Run more frequently than others so optimizing them will lead to better ROI\n",
-    "    * Queries that fail to run or cumulatively consume more credits should be optimized first\n",
-    "    \n",
-    "* Queries aggregated by query hash (i.e. query text matching exactly) show:\n",
+    "* 5% of queries fail to run to completion by count but they consume ~ 6% of credits\n",
+    "* Majority of expensive queries come from DEV_WH - which makes sense, but larger fraction comes from DAILY_REFRESH_WH by credits than by count which might have optimization opportunity.\n",
+    "* DBT_DEV, DBT_PROD write > 90% of the top 200 most expensive queries. This is inspite of the fact that their total credit consumption is <30% and much less than that of the most expensive user i.e. FIVETRAN_USER. There may be opportunity to do DBT specific optimization for Snowflake.\n",
+    "* Manually checking 5 most expensive queries showed 4 of them are consistent with peaks in warehouse usage:\n",
+    "    * Query Hash: 6ef334ed61427031d52acf53a055ab57 (DAILY_REFRESH_WH, 2 pm), 295230eae35c6270a0e240fca4a0be6f (DEV_WH, 12 pm), 233655c56c9344d5c303bdd8f4b9f264 (DAILY_REFRESH_WH, 9 am), d154d97ba4dbd4fd677baa48d6b47b71 (DAILY_REFRESH_WH, 2:50 pm), 5cb178243f7dc6005e8141a72f9bc895 (DEV_WH, 1 pm)\n",
+    "                                                                                                                                               \n",
+    "* Queries aggregated by query hash (i.e. query text matching exactly) show:                                                                                                 \n",
     "    * Query IDs: 01a78358-0604-ec7d-0000-08d15dc9f6fe, 01a78350-0604-ec7d-0000-08d15dc9f016  might be responsible for increase in compute consumption for DEV_WH on 8th Oct. (alternatively could be WH scaling/size change as well)\n",
     "    * Query Hash: 6ef334ed61427031d52acf53a055ab57 cumulatively contributes to the most number of credits (~28) and runs to completion 12 times \n",
     "    * Query Hash: 49539ab6df6b8a1df712dbbd70efe3e3 fails 3 times it runs and costs ~3 credits\n",
@@ -330,14 +467,111 @@
     "\n",
     "<div class=\"alert alert-success\">\n",
     "\n",
-    "* High spillage -> consider a larger instance\n",
-    "* Large number of partitions scanned:\n",
-    "    * Consider Search Optimization enable for selective queries\n",
-    "    * Consider Autoclustering enable with thoughtfully chosen cluster keys\n",
+    "* ##TODO:\n",
+    "    * Are these queries all current and serving a business purpose - if not remove them\n",
+    "    * Look at other queries that feed reports that no one is looking at and remove them\n",
+    "    * Optimize queries that fail to run or cumulatively consume more credits than the queries that consume the most credits but run fewer time\n",
+    "    * For highest ROI generate query hashes using templates so that queries can be grouped irrespective of parameter values\n",
+    "* For queries with higher spillage consider a larger instance\n",
+    "* For queries that scan a large number of partitions consider:\n",
+    "    * Search Optimization enable for selective queries\n",
+    "    * Autoclustering enable with thoughtfully chosen cluster keys\n",
     "* SCD2 for update queries (https://community.snowflake.com/s/article/Building-a-Type-2-Slowly-Changing-Dimension-in-Snowflake-Using-Streams-and-Tasks-Part-1)\n",
     "    \n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hash_merged = pd.merge(df_by_hash, df_hash[['query_hash', 'query_text','user_name','warehouse_name']], on=[\"query_hash\"])\n",
+    "df_hash_merged = df_hash_merged.drop_duplicates(subset=['query_hash']).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Search for queries by any column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_iterable = df[df['query_text'].str.contains(\"merge into \", case=False)][\"query_text\"].reset_index(drop=True)\n",
+    "print(update_iterable.iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Start and end time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -359,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df_unique.iloc[0][\"query_text\"])"
+    "print(df_hash_merged.iloc[0][\"query_text\"])"
    ]
   },
   {
@@ -375,7 +609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df_unique.iloc[1][\"query_text\"])"
+    "print(df_hash_merged.iloc[1][\"query_text\"])"
    ]
   },
   {
@@ -391,23 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(df_unique.iloc[2][\"query_text\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Query 12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df_unique.iloc[12][\"query_text\"])"
+    "print(df_hash_merged.iloc[12][\"query_text\"])"
    ]
   },
   {
@@ -1158,6 +1376,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
