queries and wh_analysis changes

--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -369,10 +369,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.wh_profiling_queued_load(start_date=\"2022-09-26\",wh_name=\"DEV_WH\")\n",
-    "fig = px.bar(df, x=df[\"start_time_trunced_at_minute\"], y=df[\"avg_queued_load\"], title=\" DEV_WH\",color_discrete_sequence=color_scheme)\n",
+    "df=qlib.wh_profiling_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\")\n",
+    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"], title=\" DEV_WH\",color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
-    "# fig.update_traces(width=2000000)\n",
+    "fig.update_traces(width=2000000)\n",
     "fig.show()"
    ]
   },
