--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -330,46 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.wh_profiling(sdate,edate,wh_name='DEV_WH')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.bar(df, x=df[\"start_time\"], y=[df[\"avg_running\"],df[\"avg_queued_load\"]], title=\"Warehouse Load and Metering Analysis\",color_discrete_sequence=color_scheme)\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=qlib.count_of_queries_wh(sdate,edate)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.bar(df, x=df[\"hourly_start_time\"], y=[df[\"query_count\"]], title=\"Query count DEV_WH\",color_discrete_sequence=color_scheme)\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=qlib.wh_profiling_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\")\n",
+    "df=qlib.wh_average_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\")\n",
     "fig = px.bar(df, x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"], title=\" DEV_WH\",color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
     "fig.update_traces(width=2000000)\n",
@@ -382,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.query_find(\"2022-09-26 14:30:00\",\"2022-09-26 14:50:00\")\n"
+    "df=qlib.queries_by_wh(\"2022-09-26 14:30:00\",\"2022-09-26 14:50:00\")\n"
    ]
   }
  ],
