update query and wh analysis

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -422,7 +422,7 @@
     "# q1 = df_hash[df_hash['query_hash'] == '6ef334ed61427031d52acf53a055ab57'].sort_values('start_time')\n",
     "# q1[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
     "q2 = df_hash[df_hash['query_hash'] == '295230eae35c6270a0e240fca4a0be6f'].sort_values('start_time')\n",
-    "q2[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
+    "q2[[\"query_id\", \"warehouse_name\",\"start_time\",\"end_time\"]]\n",
     "# q3 = df_hash[df_hash['query_hash'] == '233655c56c9344d5c303bdd8f4b9f264'].sort_values('start_time')\n",
     "# q3[[\"warehouse_name\",\"start_time\",\"end_time\"]]\n",
     "# q4 = df_hash[df_hash['query_hash'] == 'd154d97ba4dbd4fd677baa48d6b47b71'].sort_values('start_time')\n",
