--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WAREHOUSE PROFILING AND ANALYSIS"
+    "### Warehouse load analysis"
    ]
   },
   {
@@ -103,10 +103,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.wh_average_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\")\n",
-    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"], title=\" DEV_WH\",color_discrete_sequence=color_scheme)\n",
+    "df=qlib.wh_average_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\",delta='hour')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.wh_average_queued_load(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"DEV_WH\", delta='hour')\n",
+    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
-    "fig.update_traces(width=2000000)\n",
     "fig.show()"
    ]
   },
@@ -116,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.queries_by_wh(\"2022-09-26 14:30:00\",\"2022-09-26 14:50:00\")\n"
+    "df=qlib.wh_average_queued_load(start_date=\"2022-09-26\",end_date=\"2022-09-26\",wh_name=\"DEV_WH\",delta='minute')"
    ]
   },
   {
@@ -125,7 +142,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
+    "# Range the width has to be updated in\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.queries_by_wh(\"2022-09-26 14:10:00\",\"2022-09-26 14:50:00\", wh_name='DEV_WH')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(100)"
    ]
   },
   {
@@ -139,7 +176,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -153,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
