query analysis update

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "## Naive most expensive queries\n",
-    "n = 50\n",
+    "n = 100\n",
     "trace1 = go.Scatter(\n",
     "        mode='lines+markers',\n",
     "        x = df['query_id'][0:n],\n",
@@ -199,6 +199,24 @@
     ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df[\"query_text\"][16])"
    ]
   },
   {
