--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.wh_average_queued_load(start_date=\"2022-09-29\",end_date=\"2022-09-30\",wh_name=\"DEV_WH\",delta='hour')"
+    "df=qlib.wh_average_queued_load(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')"
    ]
   },
   {
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.wh_average_queued_load(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"DEV_WH\", delta='hour')\n",
-    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
+    "df = qlib.wh_average_queued_load(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\", delta='hour')\n",
+    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" PROD_WH\", color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
     "fig.show()"
    ]
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.wh_average_queued_load(start_date=\"2022-09-26\",end_date=\"2022-09-26\",wh_name=\"DEV_WH\",delta='minute')"
+    "df=qlib.wh_average_queued_load(start_date=\"2022-09-12\",end_date=\"2022-09-12\",wh_name=\"DEV_WH\",delta='minute')"
    ]
   },
   {
@@ -162,8 +162,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head(100)"
+    "df.head(40)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
