--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -775,7 +775,7 @@
   }
  ],
  "metadata": {
-  "hide_input": false,
+  "hide_input": true,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
