adding timezone localization for storage and making everything UTC

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -236,6 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_by_category_ts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_by_category_ts = df.groupby(['category_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
     "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"dollars\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
     "fig.update_layout(\n",
@@ -244,7 +253,10 @@
     "        'y':0.95,\n",
     "        'x':0.5,\n",
     "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'})\n",
+    "        'yanchor': 'top'},\n",
+    "    xaxis_title=\"Hourly start time (UTC)\",\n",
+    "    yaxis_title=\"US Dollars\"\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -443,6 +455,16 @@
     "df_by_user_ts = df_by_user_ts[~df_by_user_ts.user_name.isin(df_low_usage_users[\"user_name\"].values)]\n",
     "df_by_user_ts.reset_index(drop=True)\n",
     "fig = px.area(df_by_user_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Timeseries of cost by user\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'},\n",
+    "    xaxis_title=\"Hourly start time (UTC)\",\n",
+    "    yaxis_title=\"Credits used (approx.)\"\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -560,6 +582,16 @@
    "source": [
     "##TODO: Investigate why tunring off cloud services only makes daily refresh plot jump in some points\n",
     "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Timeseries of cost by warehouse\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'},\n",
+    "    xaxis_title=\"Hourly start time (UTC)\",\n",
+    "    yaxis_title=\"Credits used\"\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -678,6 +710,16 @@
    "outputs": [],
    "source": [
     "fig = px.area(df_by_pt_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Timeseries of cost by partner tools\",\n",
+    "        'y':0.95,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'},\n",
+    "    xaxis_title=\"Hourly start time (UTC)\",\n",
+    "    yaxis_title=\"Credits used (approx.)\"\n",
+    ")\n",
     "fig.show()"
    ]
   },
@@ -699,6 +741,7 @@
    "source": [
     "for i in range(len(df_warehouse)):\n",
     "    fig = px.area(df_warehouse[i], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[i])\n",
+    "    \n",
     "    fig.show()"
    ]
   },
@@ -775,7 +818,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
