--- a/notebooks/knott/cost_analysis.ipynb
+++ b/notebooks/knott/cost_analysis.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Adding system path\n",
     "import sys, pathlib\n",
     "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
@@ -75,8 +87,8 @@
     "# Initialize analysis dates\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
-    "sdate = '2022-10-11'\n",
-    "edate = '2022-10-22'\n",
+    "sdate = '2022-10-10'\n",
+    "edate = '2022-10-21'\n",
     "\n",
     "\n",
     "# Most recent rolling month that we have data for\n",
@@ -351,6 +363,15 @@
    "source": [
     "df = qlib.cost_by_user_ts(sdate, edate)\n",
     "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -778,6 +799,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
