adding timezone localization for storage and making everything UTC

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -741,7 +741,10 @@
    "source": [
     "for i in range(len(df_warehouse)):\n",
     "    fig = px.area(df_warehouse[i], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[i])\n",
-    "    \n",
+    "    fig.update_layout(\n",
+    "        xaxis_title=\"Hourly start time (UTC)\",\n",
+    "        yaxis_title=\"Credits used (approx.)\"\n",
+    "    )\n",
     "    fig.show()"
    ]
   },
