adding users template

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -202,24 +202,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df[\"query_text\"][16])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -450,6 +432,81 @@
     "# q6 = df_hash[df_hash['query_hash'] == '535f3564c40d364959615108ceee4ea0'].sort_values('start_time')\n",
     "# q6[[\"warehouse_name\",\"start_time\",\"end_time\"]]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Weekly change of 10 top expensive queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_n_expensive_query_hashes(sdate, edate, n):\n",
+    "    df_expensive = qlib.n_expensive_queries(sdate, edate, 200)\n",
+    "    df_hash = get_unique_query(df_expensive).sort_values('credits', ascending=False)\n",
+    "    hash_list = df_hash[\"query_hash\"].unique()\n",
+    "    return hash_list[0:n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "sdate = '2022-01-01'\n",
+    "n_periods = 9\n",
+    "frequency = '1M'\n",
+    "sdates = pd.date_range(sdate, periods=n_periods, freq=frequency)\n",
+    "edates = pd.date_range(sdates[1], periods=n_periods, freq=frequency)\n",
+    "start_dates = [d.strftime('%Y-%m-%d') for d in sdates]\n",
+    "end_dates = [d.strftime('%Y-%m-%d') for d in edates]\n",
+    "df_hash = pd.DataFrame()\n",
+    "\n",
+    "for idx, s in enumerate(start_dates):\n",
+    "    df_hash[s] = pd.DataFrame(get_n_expensive_query_hashes(start_dates[idx], end_dates[idx], 10), columns=[start_dates[0]])\n",
+    "\n",
+    "\n",
+    "df_hash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = df_hash.columns.values\n",
+    "repeat = []\n",
+    "for idx, col in enumerate(cols[:-1]):\n",
+    "    repeat.append(sum(el in df_hash[cols[idx]].to_list() for el in df_hash[cols[idx+1]].to_list()))\n",
+    "\n",
+    "print(repeat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 14 days\n",
+    "from statistics import mean, median\n",
+    "mean(repeat), median(repeat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
